# ta-dah-morse-code-translator

./: LICENSE  README.md  main.py  morse_code_characters.py  morse_to_text.py  pyproject.toml  text_to_morse.py
src/ta_dah_morse_code_translator/: __init__.py  console.py  main.py  test_morse_to_text.py  test_text_to_morse.py
